20260608-增加项目说明文档