@@ -22,3 +22,111 @@
 **总结**：这组参数的作用是让Java应用接入Datadog监控系统，实现性能追踪、日志增强等功能，便于开发和运维人员监控应用健康状态、排查问题。使用前需确保已在服务器上安装并启动Datadog Agent服务，且代理jar包路径正确。
 
 
+## OmitStackTraceInFastThrow 快速抛出优化
+
+### 什么是 OmitStackTraceInFastThrow？
+
+`OmitStackTraceInFastThrow` 是JVM的一个编译优化参数，默认值为`true`。当JVM检测到某个方法在**同一个位置**多次抛出**相同的异常**时，会进行"快速抛出"优化，不再打印完整的堆栈信息。
+
+### 工作原理
+
+```
+未优化时：
+java.lang.NullPointerException
+    at com.example.UserService.getUser(UserService.java:45)
+    at com.example.UserController.getUser(UserController.java:20)
+    at com.example.UserController$$FastClassByCGLIB$$.invoke(...)
+    ...
+
+优化后：
+java.lang.NullPointerException
+    at com.example.UserService.getUser(UserService.java:45)
+```
+
+### 何时触发？
+
+1. **热点代码**：方法被频繁调用
+2. **相同异常**：异常类型和异常消息完全相同
+3. **相同位置**：异常从代码的同一个位置抛出
+4. **达到阈值**：JIT编译器检测到重复抛出达到一定次数
+
+### 常见场景
+
+| 场景 | 示例 |
+|------|------|
+| 空指针异常 | 业务代码中未做空值判断，频繁触发NPE |
+| 数组越界 | 循环中索引计算错误 |
+| 类型转换 | 类型不匹配时的ClassCastException |
+| 参数校验 | 非法参数导致的IllegalArgumentException |
+
+### JVM日志表现
+
+当触发快速抛出优化时，控制台只会显示：
+```
+java.lang.NullPointerException: Cannot invoke "String.length()" because the return value is null
+```
+
+而不会显示完整的堆栈轨迹。
+
+### 如何排查问题？
+
+由于优化后无法看到完整堆栈，排查这类问题需要：
+
+1. **关闭优化进行调试**：
+   ```bash
+   -XX:-OmitStackTraceInFastThrow  # 关闭优化
+   ```
+
+2. **使用完整日志**：
+   ```bash
+   java -XX:+PrintGCDetails -XX:+PrintGCApplicationStoppedTime your-app.jar
+   ```
+
+3. **开启详细异常输出**：
+   ```java
+   // 在代码中显式输出完整堆栈
+   try {
+       // 可能抛出异常的代码
+   } catch (Exception e) {
+       log.error("Exception occurred", e);  // 使用日志框架输出完整信息
+   }
+   ```
+
+4. **添加异常日志记录**：
+   ```java
+   try {
+       // 业务代码
+   } catch (NullPointerException e) {
+       // 记录详细上下文信息
+       log.error("NPE at getUser, userId={}", userId, e);
+   }
+   ```
+
+### 生产环境建议
+
+| 配置 | 说明 |
+|------|------|
+| 默认启用 | 生产环境保持默认开启，减少异常处理开销 |
+| 调试时关闭 | 排查问题时使用 `-XX:-OmitStackTraceInFastThrow` |
+| 保留日志 | 使用日志框架记录异常完整信息 |
+
+### 性能影响
+
+- **默认开启时**：减少约10%~30%的异常处理开销
+- **关闭后**：完整堆栈信息会消耗更多CPU和内存
+
+### 相关参数
+
+```bash
+# 确认当前配置
+java -XX:+PrintFlagsFinal -version | grep OmitStackTraceInFastThrow
+
+# 输出示例
+bool OmitStackTraceInFastThrow = true           {product}
+```
+
+### 总结
+
+`OmitStackTraceInFastThrow` 是JVM的优化特性，用于减少频繁抛出相同异常时的性能开销。生产环境中建议保持开启，调试时可根据需要关闭。在实际开发中，建议结合业务日志记录异常上下文信息，便于问题排查。
+
+
